2003-01-09  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclFileName.c: remove unused variable 'macSpecialCase'
	[Bug 664749]

2003-01-08  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c (TclExprFloatError):  Use the IS_NAN macro
	for greater clarity of code.

2003-01-07  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompCmds.c (TclCompileReturnCmd): 
	* tests/compile.test:	Corrects failure of bytecompiled 
	[catch {return}] to have result TCL_RETURN (not TCL_OK) [Bug 633204].
	This patch is a workaround for 8.4.X.  A new opcode INST_RETURN is a
	better long term solution for 8.5 and later.

2003-01-04  David Gravereaux  <davygrvy@pobox.com>

	* win/makefile.vc:
	* win/rules.vc:  Fixed INSTALLDIR macro problem that blanked itself
	by accident causing the install target to put the tree at the root
	of the drive built on.  Whoops..

	Renamed the 'linkexten' option to be 'staticpkg'.  Added 'thrdalloc'
	to allow the switching _on_ of the thread allocator.  Under testing,
	I found it not to be benificial under windows for the purpose of the
	application I was using it for.  It was more important for this app
	that resources for tcl threads be returned to the system rather than
	saved/moved to the global recycler.  Be extra clean or extra fast
	for the default threaded build?  Let's move to clean and allow it to
	be switched on for users who find it benificial for their use of
	threads.

2002-12-18  David Gravereaux  <davygrvy@pobox.com>

	* win/makefile.vc: some uses of xcopy swapped to the @$(CPY) macro.
	Reported by Joe Mistachkin <joe@mistachkin.com>.

2002-12-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclNotify.c (TclFinalizeNotifier, Tcl_SetServiceMode): 
	(Tcl_ThreadAlert): Check that the stub functions are non-NULL
	before calling them.  They could be set to NULL by Tcl_SetNotifier.

2002-12-16  David Gravereaux  <davygrvy@pobox.com>

	* generic/tclPipe.c (TclCleanupChildren):
	* tests/winPipe.test: